@@ -1,0 +1,7 @@
+
+module Rufus
+module Jig
+  VERSION = '0.1.6'
+end
+end
+
